merge successful